# ueransim-edhoc-psk

config/: open5gs-gnb.yaml  open5gs-ue.yaml
src/ue/: CMakeLists.txt
src/ue/nas/mm/: auth.cpp  mm.hpp
